--- a/System HR/System HR/Properties/Resources.resx
+++ b/System HR/System HR/Properties/Resources.resx
@@ -133,4 +133,7 @@
   <data name="User_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\User_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="close_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\close_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
